Fixing navigation  items opacity on small devices

--- a/src/styles/components/general/navigationBar.module.css
+++ b/src/styles/components/general/navigationBar.module.css
@@ -18,8 +18,8 @@
   @apply rounded-full w-20 h-20 shadow-sm shadow-current;
   @apply flex justify-center items-center;
   @apply hover:shadow-md hover:shadow-current;
-
-  @apply sm:w-24 sm:h-full;
+  @apply backdrop-blur-[14px] bg-black bg-opacity-40;
+  @apply sm:w-24 sm:h-full sm:backdrop-blur-[4px] sm:bg-transparent sm:bg-opacity-100;
 }
 
 .navigationText {
